--- a/Script01/index.html
+++ b/Script01/index.html
@@ -4,7 +4,16 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-  
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylsheet" type="text/css" media="screen" href="css/style.css">
+    <!-- JavaScript-->
+    <script src="js/script.js" defer></script>
+
+
+</head>
 
 
  
