--- a/Script01/tag_part01.html
+++ b/Script01/tag_part01.html
@@ -23,7 +23,7 @@
     </ol>
     <div> <!-- Divisão, usada para agrupar elementos -->
         <h2>Divisão com Imagem</h2> <!-- Título secundário dentro da divisão -->
-        <img src="img/exemplo.jpg" alt="Descrição da Imagem"> <!-- Imagem com atributos src e alt -->
+        <img src="img/exemplo.png" alt="Descrição da Imagem"> <!-- Imagem com atributos src e alt -->
     </div>
 </body>
 
